package composite.examples.geometricShapes;

public class Square extends GraphicObject {
    public Square(String color) {
        name = "Square";
        this.color = color;
    }
}
