@startuml

title __GEOMETRICSHAPES's Class Diagram__\n

  namespace composite.examples.geometricShapes {
    class composite.examples.geometricShapes.Circle {
        + Circle()
    }
  }
  

  namespace composite.examples.geometricShapes {
    class composite.examples.geometricShapes.CompositeDemo {
        {static} + main()
    }
  }
  

  namespace composite.examples.geometricShapes {
    class composite.examples.geometricShapes.GraphicObject {
        + children : List<GraphicObject>
        + color : String
        # name : String
        + GraphicObject()
        + getName()
        + setName()
        + toString()
        - print()
    }
  }
  

  namespace composite.examples.geometricShapes {
    class composite.examples.geometricShapes.Square {
        + Square()
    }
  }
  

  composite.examples.geometricShapes.Circle -up-|> composite.examples.geometricShapes.GraphicObject
  composite.examples.geometricShapes.Square -up-|> composite.examples.geometricShapes.GraphicObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
